test-files/expected/redeclare.errors
redeclare:2:1: error: already declared: x
   2 | var x = 2
     | ^^^^^^^^^
  redeclare:1:1: note: first declared here
     1 | var x = 1;
       | ^^^^^^^^^
